--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
 			<version>1.0.10</version>
 		</dependency>
 
+		<!-- Bootsfaces -->		
+		<dependency>
+		    <groupId>net.bootsfaces</groupId>
+		    <artifactId>bootsfaces</artifactId>
+		    <version>1.1.3</version>
+		    <scope>compile</scope>
+		</dependency>
+
 		<!-- Usado para geração de arquivos Excel -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
