Signed-off-by: xFaabricio <fabricio_oliveira1@hotmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,18 @@
 		</dependency>
 
 		<!-- Spring Security (autenticação e autorização) -->
+		
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.springframework.webflow</groupId> -->
+<!-- 		    <artifactId>spring-faces</artifactId> -->
+<!-- 		    <version>2.4.6.RELEASE</version> -->
+<!-- 		</dependency> -->
+<!--         <dependency> -->
+<!-- 		    <groupId>org.springframework.security</groupId> -->
+<!-- 		    <artifactId>spring-security-taglibs</artifactId> -->
+<!-- 		    <version>5.0.0.RC1</version> -->
+<!-- 		</dependency> -->
+		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
