--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
 	
-	<display-name>Example System</display-name>
+	<display-name>Ambulance Task</display-name>
 
 	<!-- PrimeFaces Theme -->
     <context-param>
@@ -77,6 +77,10 @@
     <!-- Mime Type --> 
     
     
+<!--     <context-param> -->
+<!--     	<param-name>javax.faces.FACELETS_LIBRARIES</param-name> -->
+<!--     	<param-value>/WEB-INF/springsecurity.taglib.xml</param-value> -->
+<!-- 	</context-param> -->
     
 	<context-param>
 		<param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
